* 2013-10-24 - thorben.betten@open-xchange.com

 - Fix for bug 29229: No excessive HTML-escaping when inserting HTML attribute values

* 2013-10-24 - martin.herfurth@open-xchange.com

 - Fix for bug 29339: Conflicts for multiday appointments.
 - Fix for bug 29459: TimeZone Component has to be first Element for Outlook (Mac Version).

* 2013-10-23 - thorben.betten@open-xchange.com

 - Fix for bug 29356: Introduced property "com.openexchange.mail.transport.removeMimeVersionInSubParts" to 'transport.properties' to specify
                      whether to remove superfluous "MIME-Version" header from multipart sub-parts on message transport
 - Fix for bug 29353: Synchronize create/update operations on database folders
 - Fix for bug 29436: Accept '*' characters in Content-Type token
 - Fix for bug 29434: Set "Content-Length" header if exact length is known
 - Fix for bug 29400: Check last-accessed time stamp prior to issuing a 102 (Processing) response

* 2013-10-22 - thorben.betten@open-xchange.com

 - Fix for bug 29410: Strictly handle with stream-based access to file data, no temporary storing/conversion to byte array
 - Fix for bug 29412: Escape HTML content prior to writing to output writer

* 2013-10-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 29391: Extended the sizes of the 'filename', 'title' and 'file_size' columns in the 'infostore_document' table

* 2013-10-21 - marcus.klein@open-xchange.com

 - Fix for bug 26072: Using a master thread in a single thread executor service to create new threads for the thread pool. This ensures that
   new threads for the thread pool inherit the correct thread context classloader.

* 2013-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 29294: Examine first read byte prior to pushing it back to stream

* 2013-10-18 - martin.herfurth@open-xchange.com

 - Fix for bug 28958: Create and handle counter mails for external organizer.

* 2013-10-17 - martin.herfurth@open-xchange.com
