@@ -1,6 +1,7 @@
 * 2013-10-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 29229: No excessive HTML-escaping when inserting HTML attribute values
+ - Fix for bug 29429: Use Java's naming for charset "cp932" that is "MS932"
 
 * 2013-10-24 - martin.herfurth@open-xchange.com
 
